syntax = "proto3";

package api;

// The Librarian service handles all of the main Libri functionality.
service Librarian {

    // Ping confirms simple request/response connectivity.
    rpc Ping (PingRequest) returns (PingResponse) {}

    // Identify identifies the node by name and ID.
    rpc Identify (IdentityRequest) returns (IdentityResponse) {}

    // Find returns the value for a key or the closest peers to it.
    rpc Find (FindRequest) returns (FindResponse) {}

    // Store stores a value in a given key.
    rpc Store(StoreRequest) returns (StoreResponse) {}
}

message PingRequest {}

message PingResponse {
    string message = 1;
}

message IdentityRequest {
    // 32-byte unique request ID
    bytes request_id = 1;
}

message IdentityResponse {
    // ID of request that generated this response
    bytes request_id = 1;

    // 32-byte peer ID
    bytes peer_id = 2;

    // self-reported name of the peer
    string peer_name = 3;
}

message FindRequest {
    // 32-byte unique request ID
    bytes request_id = 1;

    // 32-byte target to find peers around
    bytes key = 2;

    // the number of closests peers to return
    uint32 num_peers = 3;
}

message FindResponse {
    // ID of request that generated this response
    bytes request_id = 1;

    // list of peers closest to target
    repeated PeerAddress addresses = 2;

    // value, if found
    bytes value = 3;
}

message PeerAddress {
    // 32-byte peer ID
    bytes peer_id = 1;

    // self-reported name of the peer
    string peer_name = 2;

    // public IP address
    string ip = 3;

    // public address TCP port
    uint32 port = 4;
}

message StoreRequest {
    // 32-byte unique request ID
    bytes request_id = 1;

    // key to store value under
    bytes key = 2;

    // value to store for key
    bytes value = 3;
}

message StoreResponse {
    // ID of request that generated this response
    bytes request_id = 1;

    // whether store operation was successful
    StoreStatus status = 2;
}

enum StoreStatus {
    FAILED = 0;
    SUCCEEDED = 1;
}
